--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -121,6 +121,12 @@
     <Content Include="img\30.jpg" />
     <Content Include="img\40.jpg" />
     <Content Include="img\50.jpg" />
+    <Content Include="img\600BugZap.jpg" />
+    <Content Include="img\600FinPortal.jpg" />
+    <Content Include="img\600FizzBuzz.jpg" />
+    <Content Include="img\600SumofAllFears.jpg" />
+    <Content Include="img\600SunsetHills.jpg" />
+    <Content Include="img\600TacoCat.jpg" />
     <Content Include="img\7971A175-1E8F-41AA-8366-CA4B4ECD2B41_1_201_a.jpeg" />
     <Content Include="img\BACB_Logo_200.png" />
     <Content Include="img\blog\blog_post_1.jpg" />
@@ -139,6 +145,9 @@
     <Content Include="img\blog\blog_post_7_full.jpg" />
     <Content Include="img\blog\blog_post_8.jpg" />
     <Content Include="img\blog\blog_post_8_full.jpg" />
+    <Content Include="img\bugzap.png" />
+    <Content Include="img\BugZapLogo copy.png" />
+    <Content Include="img\CleanShot 2021-03-03 at 17.59.03%402x.png" />
     <Content Include="img\CleanShot 2021-03-08 at 16.41.50%402x.png" />
     <Content Include="img\clients\client-1.png" />
     <Content Include="img\clients\client-2.png" />
@@ -147,6 +156,7 @@
     <Content Include="img\clients\client-5.png" />
     <Content Include="img\clients\client-6.png" />
     <Content Include="img\clients\client-7.png" />
+    <Content Include="img\fizzbuzz.png" />
     <Content Include="img\Hult_transparent_logo.png" />
     <Content Include="img\main_bg.png" />
     <Content Include="img\main_photo.jpg" />
@@ -163,9 +173,19 @@
     <Content Include="img\portfolio\full\5.jpg" />
     <Content Include="img\portfolio\full\6.jpg" />
     <Content Include="img\profile.png" />
+    <Content Include="img\Sumofallfears.png" />
+    <Content Include="img\sunset hills.png" />
+    <Content Include="img\taccocat.png" />
+    <Content Include="img\TacoCat.png" />
     <Content Include="img\testimonials\testimonial-1.jpg" />
     <Content Include="img\testimonials\testimonial-2.jpg" />
     <Content Include="img\testimonials\testimonial-3.jpg" />
+    <Content Include="img\Untitled_Artwork 10.jpg" />
+    <Content Include="img\Untitled_Artwork 11.jpg" />
+    <Content Include="img\Untitled_Artwork 6.jpg" />
+    <Content Include="img\Untitled_Artwork 7.jpg" />
+    <Content Include="img\Untitled_Artwork 8.jpg" />
+    <Content Include="img\Untitled_Artwork 9.jpg" />
     <Content Include="Index.html" />
     <Content Include="js\animating.js" />
     <Content Include="js\imagesloaded.pkgd.min.js" />
