--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -174,6 +174,8 @@
     <Content Include="img\portfolio\full\5.jpg" />
     <Content Include="img\portfolio\full\6.jpg" />
     <Content Include="img\profile.png" />
+    <Content Include="img\Screen Shot 2021-06-16 at 10.28.07 PM.png" />
+    <Content Include="img\Screen Shot 2021-06-16 at 10.29.39 PM.png" />
     <Content Include="img\Screen Shot 2021-06-16 at 8.42.26 PM.png" />
     <Content Include="img\Screen Shot 2021-06-16 at 8.45.19 PM.png" />
     <Content Include="img\Screen Shot 2021-06-16 at 8.48.26 PM.png" />
