--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -179,6 +179,9 @@
     <Content Include="img\Screen Shot 2021-06-16 at 8.42.26 PM.png" />
     <Content Include="img\Screen Shot 2021-06-16 at 8.45.19 PM.png" />
     <Content Include="img\Screen Shot 2021-06-16 at 8.48.26 PM.png" />
+    <Content Include="img\Screen Shot 2021-06-18 at 10.39.24 PM.png" />
+    <Content Include="img\Screen Shot 2021-06-18 at 10.40.12 PM.png" />
+    <Content Include="img\Screen Shot 2021-06-18 at 9.06.02 PM.png" />
     <Content Include="img\Sumofallfears.png" />
     <Content Include="img\sunset hills.png" />
     <Content Include="img\taccocat.png" />
