--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -128,6 +128,7 @@
     <Content Include="img\600SunsetHills.jpg" />
     <Content Include="img\600TacoCat.jpg" />
     <Content Include="img\7971A175-1E8F-41AA-8366-CA4B4ECD2B41_1_201_a.jpeg" />
+    <Content Include="img\android-chrome-512x512.png" />
     <Content Include="img\BACB_Logo_200.png" />
     <Content Include="img\blog\blog_post_1.jpg" />
     <Content Include="img\blog\blog_post_1_full.jpg" />
