--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -160,6 +160,7 @@
     <Content Include="img\FinPortalSS.png" />
     <Content Include="img\fizzbuzz.png" />
     <Content Include="img\Hult_transparent_logo.png" />
+    <Content Include="img\huuuguu.jpg" />
     <Content Include="img\main_bg.png" />
     <Content Include="img\main_photo.jpg" />
     <Content Include="img\portfolio\1.jpg" />
