--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -161,6 +161,7 @@
     <Content Include="img\fizzbuzz.png" />
     <Content Include="img\Hult_transparent_logo.png" />
     <Content Include="img\huuuguu.jpg" />
+    <Content Include="img\jbjbbj.png" />
     <Content Include="img\main_bg.png" />
     <Content Include="img\main_photo.jpg" />
     <Content Include="img\portfolio\1.jpg" />
