--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -154,6 +154,7 @@
     <Content Include="img\BugZapLogo copy.png" />
     <Content Include="img\CleanShot 2021-03-03 at 17.59.03%402x.png" />
     <Content Include="img\CleanShot 2021-03-08 at 16.41.50%402x.png" />
+    <Content Include="img\CleanShot 2021-11-09 at 16.48.38%402x.png" />
     <Content Include="img\clients\client-1.png" />
     <Content Include="img\clients\client-2.png" />
     <Content Include="img\clients\client-3.png" />
@@ -190,6 +191,7 @@
     <Content Include="img\Screen Shot 2021-06-18 at 10.39.24 PM.png" />
     <Content Include="img\Screen Shot 2021-06-18 at 10.40.12 PM.png" />
     <Content Include="img\Screen Shot 2021-06-18 at 9.06.02 PM.png" />
+    <Content Include="img\Screen Shot 2021-11-09 at 4.47.50 PM.png" />
     <Content Include="img\Sumofallfears.png" />
     <Content Include="img\sunset hills.png" />
     <Content Include="img\taccocat.png" />
