--- a/Test Portfolio/JSPortfolio.csproj
+++ b/Test Portfolio/JSPortfolio.csproj
@@ -269,6 +269,7 @@
     <Content Include="img\Jeremy Steward Resume.pdf" />
     <Content Include="img\helpticket.pdf" />
     <Content Include="img\Jeremy Steward Resume 2021.pdf" />
+    <Content Include="img\Jeremy Steward CV 2022.pdf" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
